crates/tau-cli/tests/snapshots/help_snapshots__build_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
assertion_line: 70
expression: s
---
Build a deployment bundle from this project (Phase 2 §C.2), or compile a workflow to WebAssembly (`tau build wasm <project>`)

Usage: tau build [OPTIONS] [PROJECT] [COMMAND]

Commands:
  wasm  Compile this project's workflow IR to a WebAssembly module (β.7.5)
  help  Print this message or the help of the given subcommand(s)

Arguments:
  [PROJECT]
          Path to the project to build. May be a directory (containing `tau.toml`) or a `.ts` file (β.8 TypeScript-authoring surface). Defaults to the current working directory

Options:
      --target <TRIPLE>
          Target triple to build for (default: host). Must be an Available triple in the ADR-0034 registry

  -o, --output <PATH>
          Output path (default: `<project>/<name>-<version>.tau`)

      --agent <ID>
          Restrict the bundle to one or more agents (repeatable: `--agent a --agent b`). When omitted, every agent is built. Selecting agents also prunes packages they don't reference. To avoid overwriting a full bundle at the default path, pass `-o`/`--output`

      --offline
          Use pinned `.tau/mcp/<entry>.contract.json` files for MCP contracts; never reach out to live MCP servers. Build errors out if any pinned file is missing

      --emit-trigger <ADAPTER>
          Also emit host-adapter descriptors for the project's cron triggers. `systemd` writes `.timer` + `.service` units; `k8s` writes `CronJob` manifests. Files are written next to the bundle. Manual triggers and cron schedules systemd can't auto-translate are skipped with a note
          
          [possible values: systemd, k8s]

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

      --no-sandbox
          Disable sandboxing entirely for this invocation (shorthand for `--sandbox passthrough`). For development and one-off debugging. Auditable in shell history

      --sandbox <SANDBOX>
          Force a specific sandbox adapter kind, overriding the resolver. `--no-sandbox` is shorthand for `--sandbox passthrough`. Conflicts with `--no-sandbox` if both set

          Possible values:
          - native:      Linux landlock + seccomp + namespaces
          - container:   Docker / Podman shell-out
          - passthrough: No isolation (explicit opt-out)

      --log-non-blocking
          Write logs through a non-blocking MPSC channel (high-throughput). Requires `--log-file`. Env: `TAU_LOG_NON_BLOCKING=1`
          
          [env: TAU_LOG_NON_BLOCKING=]

      --log-file <PATH>
          Write logs to the given file instead of stderr. Required when `--log-non-blocking` is set. Env: `TAU_LOG_FILE`
          
          [env: TAU_LOG_FILE=]

      --log-rotation <LOG_ROTATION>
          Log file rotation policy. Ignored unless `--log-file` is set. Env: `TAU_LOG_ROTATION`

          Possible values:
          - never:  No rotation — append forever to a single file
          - daily:  Roll over each day at UTC midnight (filename gains a date suffix)
          - hourly: Roll over each hour (filename gains a date+hour suffix)
          
          [env: TAU_LOG_ROTATION=]
          [default: never]

      --otlp-endpoint <URL>
          Export traces over OTLP/gRPC to this endpoint, e.g. `https://otel.example.com:4317`. Falls back to `OTEL_EXPORTER_OTLP_ENDPOINT` env var. Auth + tenant headers come from `OTEL_EXPORTER_OTLP_HEADERS` (comma-separated `key=value` pairs). Requires the `otlp` cargo feature (on by default)
          
          [env: OTEL_EXPORTER_OTLP_ENDPOINT=]

  -h, --help
          Print help (see a summary with '-h')
