crates/tau-cli/tests/snapshots/help_snapshots__check_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
Run pre-flight validation against the project (config, lockfile, packages, sandbox, plugins, skills). Aggregates existing validators into one CI/IDE-friendly verb

Usage: tau check [OPTIONS] [CATEGORY]

Arguments:
  [CATEGORY]
          Optional category — runs only the named check (one of: config, lockfile, packages, sandbox, plugins, skills). When omitted, runs all 6 categories
          
          [possible values: config, lockfile, packages, sandbox, plugins, skills]

Options:
      --fast
          Reduce per-check I/O where a fast variant exists. No-op on categories without a fast variant (config, lockfile, packages)

      --auto-resolve
          Install missing required packages before running checks

      --project <PATH>
          Project root override. Default: cwd (walks up for tau.toml)

      --json
          Emit JSONL events to stdout. Mutually exclusive with --sarif

      --sarif [<PATH>]
          Emit SARIF 2.1.0 document. With path → write file; without → stdout. Mutually exclusive with --json

      --target <TRIPLE>
          Validate against a specific target triple instead of the locally resolved adapter. See `tau target list` for valid values

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

      --no-sandbox
          Disable sandboxing entirely for this invocation (shorthand for `--sandbox passthrough`). For development and one-off debugging. Auditable in shell history

      --sandbox <SANDBOX>
          Force a specific sandbox adapter kind, overriding the resolver. `--no-sandbox` is shorthand for `--sandbox passthrough`. Conflicts with `--no-sandbox` if both set

          Possible values:
          - native:      Linux landlock + seccomp + namespaces
          - container:   Docker / Podman shell-out
          - passthrough: No isolation (explicit opt-out)

      --log-non-blocking
          Write logs through a non-blocking MPSC channel (high-throughput). Requires `--log-file`. Env: `TAU_LOG_NON_BLOCKING=1`
          
          [env: TAU_LOG_NON_BLOCKING=]

      --log-file <PATH>
          Write logs to the given file instead of stderr. Required when `--log-non-blocking` is set. Env: `TAU_LOG_FILE`
          
          [env: TAU_LOG_FILE=]

      --log-rotation <LOG_ROTATION>
          Log file rotation policy. Ignored unless `--log-file` is set. Env: `TAU_LOG_ROTATION`

          Possible values:
          - never:  No rotation — append forever to a single file
          - daily:  Roll over each day at UTC midnight (filename gains a date suffix)
          - hourly: Roll over each hour (filename gains a date+hour suffix)
          
          [env: TAU_LOG_ROTATION=]
          [default: never]

  -h, --help
          Print help (see a summary with '-h')
