crates/tau-cli/tests/snapshots/help_snapshots__list_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
List installed packages or available agents

Usage: tau list [OPTIONS] [RESOURCE]

Arguments:
  [RESOURCE]
          What to list. Defaults to `packages`

          Possible values:
          - packages: List installed packages
          - agents:   List available agents
          
          [default: packages]

Options:
      --global
          Restrict the listing to globally-installed entries. (Ignored when `resource` is `agents`; agents are always project-scoped.)

      --all
          List both project and global entries side-by-side. (Ignored when `resource` is `agents`; agents are always project-scoped.)

      --capabilities
          When listing agents, also print the effective capability set (allow + deny per agent, computed against the package manifest). Ignored when `resource` is `packages`

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

      --no-sandbox
          Disable sandboxing entirely for this invocation (shorthand for `--sandbox passthrough`). For development and one-off debugging. Auditable in shell history

      --sandbox <SANDBOX>
          Force a specific sandbox adapter kind, overriding the resolver. `--no-sandbox` is shorthand for `--sandbox passthrough`. Conflicts with `--no-sandbox` if both set

          Possible values:
          - native:      Linux landlock + seccomp + namespaces
          - container:   Docker / Podman shell-out
          - passthrough: No isolation (explicit opt-out)

      --otlp-endpoint <URL>
          Export traces over OTLP/gRPC to this endpoint, e.g. `https://otel.example.com:4317`. Falls back to `OTEL_EXPORTER_OTLP_ENDPOINT` env var. Auth + tenant headers come from `OTEL_EXPORTER_OTLP_HEADERS` (comma-separated `key=value` pairs). Requires the `otlp` cargo feature (on by default)
          
          [env: OTEL_EXPORTER_OTLP_ENDPOINT=]

  -h, --help
          Print help (see a summary with '-h')
