crates/tau-cli/tests/snapshots/help_snapshots__plugin_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
Plugin debugging utilities (spec §9 debug tier)

Usage: tau plugin [OPTIONS] <COMMAND>

Commands:
  describe  Print a plugin's handshake metadata + per-method schemas
  run       Run a plugin standalone (without an agent context)
  protocol  Inspect or transform plugin-protocol recordings
  help      Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

      --no-sandbox
          Disable sandboxing entirely for this invocation (shorthand for `--sandbox passthrough`). For development and one-off debugging. Auditable in shell history

      --sandbox <SANDBOX>
          Force a specific sandbox adapter kind, overriding the resolver. `--no-sandbox` is shorthand for `--sandbox passthrough`. Conflicts with `--no-sandbox` if both set

          Possible values:
          - native:      Linux landlock + seccomp + namespaces
          - container:   Docker / Podman shell-out
          - passthrough: No isolation (explicit opt-out)

      --log-non-blocking
          Write logs through a non-blocking MPSC channel (high-throughput). Requires `--log-file`. Env: `TAU_LOG_NON_BLOCKING=1`
          
          [env: TAU_LOG_NON_BLOCKING=]

      --log-file <PATH>
          Write logs to the given file instead of stderr. Required when `--log-non-blocking` is set. Env: `TAU_LOG_FILE`
          
          [env: TAU_LOG_FILE=]

      --log-rotation <LOG_ROTATION>
          Log file rotation policy. Ignored unless `--log-file` is set. Env: `TAU_LOG_ROTATION`

          Possible values:
          - never:  No rotation — append forever to a single file
          - daily:  Roll over each day at UTC midnight (filename gains a date suffix)
          - hourly: Roll over each hour (filename gains a date+hour suffix)
          
          [env: TAU_LOG_ROTATION=]
          [default: never]

  -h, --help
          Print help (see a summary with '-h')
